@@ -45,14 +45,23 @@ namespace libtorrent
 	TORRENT_EXPORT bool instantiate_connection(io_service& ios
 		, proxy_settings const& ps, socket_type& s
 		, void* ssl_context
-		, utp_socket_manager* sm)
+		, utp_socket_manager* sm
+		, bool peer_connection)
 	{
 		if (sm)
 		{
 			s.instantiate<utp_stream>(ios);
 			s.get<utp_stream>()->set_impl(sm->new_utp_socket(s.get<utp_stream>()));
 		}
-		else if (ps.type == proxy_settings::none)
+#if TORRENT_USE_I2P
+		else if (ps.type == proxy_settings::i2p_proxy)
+		{
+			s.instantiate<i2p_stream>(ios);
+			s.get<i2p_stream>()->set_proxy(ps.hostname, ps.port);
+		}
+#endif
+		else if (ps.type == proxy_settings::none
+			|| (peer_connection && !ps.proxy_peer_connections))
 		{
 #ifdef TORRENT_USE_OPENSSL
 			if (ssl_context)
@@ -105,13 +114,6 @@ namespace libtorrent
 			if (ps.type == proxy_settings::socks4)
 				str->set_version(4);
 		}
-#if TORRENT_USE_I2P
-		else if (ps.type == proxy_settings::i2p_proxy)
-		{
-			s.instantiate<i2p_stream>(ios);
-			s.get<i2p_stream>()->set_proxy(ps.hostname, ps.port);
-		}
-#endif
 		else
 		{
 			TORRENT_ASSERT_VAL(false, ps.type);
